[gd_scene load_steps=14 format=3 uid="uid://b6ijm75kmpy3h"]

[ext_resource type="FontFile" uid="uid://bgda62dmfivuc" path="res://Assets/Fonts/super-pixel-font/SuperPixel-m2L8j.ttf" id="1_0yb7x"]
[ext_resource type="Script" path="res://win_menu.gd" id="1_ffm88"]
[ext_resource type="Texture2D" uid="uid://d1rwar1jdfhm" path="res://Assets/Menu/Buttons/Restart.png" id="2_0eekd"]
[ext_resource type="Texture2D" uid="uid://bbowvlm1ryknl" path="res://Assets/Background/Designer.png" id="2_vo43v"]
[ext_resource type="Texture2D" uid="uid://cdnueqg8umaxj" path="res://Assets/Menu/Buttons/Back.png" id="3_0vsmq"]
[ext_resource type="Texture2D" uid="uid://dwxcnuuyy3b5j" path="res://Assets/Menu/Buttons/Close.png" id="4_gerin"]
[ext_resource type="AudioStream" uid="uid://b7kia04uu8d8w" path="res://Sounds/chomp.mp3" id="5_gh4oh"]
[ext_resource type="AudioStream" uid="uid://s5h8fcuq3yo5" path="res://Sounds/you-win-sequence-2-183949.mp3" id="8_duedm"]

[sub_resource type="Gradient" id="Gradient_72335"]
offsets = PackedFloat32Array(0, 0.0235294, 0.152941, 0.207843, 0.576471, 0.996078, 1)
colors = PackedColorArray(0.796078, 0.458824, 0, 1, 0.803922, 0.705882, 0.0196078, 1, 0.81996, 0.595802, 0.0531423, 1, 0.843188, 0.436375, 0.101709, 1, 0.937255, 0.905882, 0.313726, 1, 0.890196, 0.113725, 0.2, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ty7il"]
gradient = SubResource("Gradient_72335")

[sub_resource type="Curve" id="Curve_ansad"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.326619), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8xlc2"]
curve = SubResource("Curve_ansad")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mhsqj"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 40.0
initial_velocity_max = 40.0
gravity = Vector3(0, 49, 0)
scale_min = 8.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_8xlc2")
color_ramp = SubResource("GradientTexture1D_ty7il")

[node name="Win menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ffm88")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_vo43v")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -85.0
offset_right = 178.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="RetryMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_pressed_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_hover_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_focus_color = Color(0.231373, 0.584314, 0, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("1_0yb7x")
theme_override_font_sizes/font_size = 45
action_mode = 0
text = "New game"
icon = ExtResource("2_0eekd")
expand_icon = true

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_pressed_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_hover_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_focus_color = Color(0.231373, 0.584314, 0, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("1_0yb7x")
theme_override_font_sizes/font_size = 45
action_mode = 0
text = "Main Menu "
icon = ExtResource("3_0vsmq")
expand_icon = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_pressed_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_hover_color = Color(0.231373, 0.584314, 0, 1)
theme_override_colors/font_focus_color = Color(0.231373, 0.584314, 0, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("1_0yb7x")
theme_override_font_sizes/font_size = 45
action_mode = 0
text = "Quit"
icon = ExtResource("4_gerin")
expand_icon = true

[node name="ClickedButton" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("5_gh4oh")

[node name="GPUParticles2D" type="GPUParticles2D" parent="VBoxContainer"]
position = Vector2(-97.5, 168.5)
scale = Vector2(8, 8)
amount = 50
process_material = SubResource("ParticleProcessMaterial_mhsqj")
explosiveness = 0.75

[node name="GPUParticles2D2" type="GPUParticles2D" parent="VBoxContainer"]
position = Vector2(482, 178)
scale = Vector2(8, 8)
amount = 50
process_material = SubResource("ParticleProcessMaterial_mhsqj")
explosiveness = 0.75

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_duedm")

[connection signal="button_down" from="VBoxContainer/RetryMenu" to="." method="_on_retry_menu_button_down"]
[connection signal="button_up" from="VBoxContainer/RetryMenu" to="." method="_on_retry_menu_button_up"]
[connection signal="button_down" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_down"]
[connection signal="button_up" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_up"]
[connection signal="button_up" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
